--- a/eureka.properties
+++ b/eureka.properties
@@ -1,5 +1,5 @@
-eureka.server.port=9000
+server.port=9000
 eureka.instance.hostname=localhost
 eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=false
-eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:${eureka.server.port}/eureka/
+eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
